--- a/jonas/css/starter/sass/components/_button.scss
+++ b/jonas/css/starter/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+  &,
   &:link,
   &:visited {
     position: relative;
@@ -8,6 +9,10 @@
     text-decoration: none;
     padding: 1.5rem 4rem;
     font-size: $default-font-size;
+
+    //change for the <button> element
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
@@ -20,7 +25,9 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(-0.1rem);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
