--- a/jonas/css/starter/sass/layout/_navigation.scss
+++ b/jonas/css/starter/sass/layout/_navigation.scss
@@ -38,6 +38,16 @@
     text-align: center;
     cursor: pointer;
     transition: all 0.2s;
+
+    @include respond($tab-port) {
+      top: 4rem;
+      right: 4rem;
+    }
+
+    @include respond($phone) {
+      top: 3rem;
+      right: 3rem;
+    }
   }
 
   &__button:hover &__icon::before {
@@ -57,6 +67,16 @@
     right: 6.5rem;
     z-index: 1000;
     transition: transform 0.8s cubic-bezier(0.83, 0, 0.17, 1);
+
+    @include respond($tab-port) {
+      top: 4.5rem;
+      right: 4.5rem;
+    }
+
+    @include respond($phone) {
+      top: 3.5rem;
+      right: 3.5rem;
+    }
   }
 
   &__nav {
