--- a/jonas/css/nexter/sass/_header.scss
+++ b/jonas/css/nexter/sass/_header.scss
@@ -1,4 +1,64 @@
 .header {
   background-color: $color-grey-dark-1;
   grid-column: full-start / col-end 6;
+  background-image: linear-gradient(rgba($color-secondary, 0.85), rgba($color-secondary, 0.85)), url(../img/hero.jpeg);
+  background-size: cover;
+  background-position: center;
+  padding: 8rem;
+  padding-top: 4rem;
+  justify-content: center;
+
+  display: grid;
+  grid-template-rows: 1fr min-content minmax(min-content, 6rem) 1fr;
+  grid-template-columns: minmax(min-content, max-content);
+  row-gap: 1.5rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: full-start/ full-end;
+  }
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 5rem;
+  }
+
+  &__logo {
+    height: 3rem;
+    justify-self: center;
+  }
+
+  &__seenon-text {
+    display: grid;
+    grid-template-columns: 1fr max-content 1fr;
+    column-gap: 1.5rem;
+    align-items: center;
+    font-size: 1.6rem;
+    color: $color-grey-light-2;
+
+    &::before,
+    &::after {
+      content: "";
+      height: 1px;
+      display: block;
+      background-color: currentColor;
+    }
+  }
+
+  &__seenon-logos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 3rem;
+    justify-items: center;
+    align-items: center;
+
+    img {
+      max-width: 100%;
+      max-height: 2.5rem;
+      filter: brightness(70%);
+    }
+  }
+
+  &__btn {
+    align-self: start;
+    justify-self: start;
+  }
 }
